Shortened the intro-text, adjusted the aside links because they where causing issues where the after was extending past the content, re-worked how the h2 headers adjusted it's spacing, and lowered the pixel ratio for the border on buttons. This is 0.0.3, the next interration will be the homepage.

--- a/css/04-typography.css
+++ b/css/04-typography.css
@@ -40,6 +40,16 @@ main ul li:before {
 .intro-text {
 	font-size: 20px;
 	line-height: 32px;
+	width: 65%;
+}
+
+.intro-text:after {
+	content: "";
+	display: block;
+	width: 20%;
+	background: #a31d36;
+	height: 5px;
+	margin-top: 25px;
 }
 
 main a {
@@ -93,6 +103,30 @@ main a:hover:after {
 	transition: all 0s ease;
 }
 
+aside a:after,
+aside a:before,
+main a.button:after,
+main a.button:before {
+	display: none;
+}
+
+aside a:hover:after,
+aside a:hover:before,
+main a.button:hover:after,
+main a.button:hover:before {
+	background: transparent;
+}
+
+aside a {
+	border-bottom: 1px solid #fa5735;
+}
+
+aside a:hover,
+aside a:focus {
+	color: #ca1237;
+	border-bottom: 1px solid #ca1237;
+}
+
 h1 {
 	color: #a31d36;
 	font-size: 52px;
@@ -108,11 +142,11 @@ h2 {
 	line-height: 1.3;
 	font-weight: 300;
 	letter-spacing: .5px;
-	padding-top: 0;
+	padding-top: 1em;
 	padding-bottom: .7em;
 }
 
-p + h2 {
+h2 + p {
 	padding-top: .8em;
 }
 
@@ -165,7 +199,7 @@ aside ul {
 }
 
 aside ul li {
-	padding-bottom: .4em;
+	padding-bottom: .6em;
 }
 
 .background-gray aside header {
